--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api
-spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api
-spring.datasource.username=${DB_NAME}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER_NAME}
 spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=true
